--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
 
         <div class="barra">
             <ul>
-                <a href="#"><li>inicio</li></a> |
-                <a href="#"><li>sobre</li></a> |
-                <a href="#"><li>galeria</li></a> |
-                <a href="#"><li>perguntas</li></a> |
-                <a href="#"><li>contato</li></a>
+                <a href="#hero">
+                    <li>inicio</li>
+                </a> |
+                <a href="#s2">
+                    <li>sobre</li>
+                </a> |
+                <a href="#">
+                    <li>galeria</li>
+                </a> |
+                <a href="#">
+                    <li>perguntas</li>
+                </a> |
+                <a href="#">
+                    <li>contato</li>
+                </a>
             </ul>
         </div>
 
@@ -44,9 +54,30 @@
             <div class="nomemarca">
                 <p>M o d e r n <br> L i f e s t y l e <br> S t o r e</p>
             </div>
-        </div>        
+        </div>
     </section>
-    <p class="seta"><i class="fa-solid fa-angle-down fa-bounce" style="color: #ffffff;"></i></p>
+    <a href="#s2">
+        <p class="seta"><i class="fa-solid fa-angle-down fa-bounce" style="color: #ffffff;"></i></p>
+    </a>
+
+
+    <section id="s2">
+        <h1>S O B R E</h1>
+
+        <div class="sobre">
+            <div><img src="img/2148605140.jpg" alt="salasobre" width="300px"></div>
+
+            <div class="txtsobre">
+                <p>What's special about your product, service, or company? Highlight the things that set you apart from
+                    your competition, whether it's a special feature, a unique philosophy, or awards and recognition
+                    that you have received. Think of this as your elevator pitch to get the reader's attention.
+                </p>
+
+                <a href="#s3"></a><button>LER MAIS</button></a>
+
+            </div>
+        </div>
+    </section>
 
 </body>
 
